--- a/frontend/E-commerce/frontend/src/components/NavBar.module.css
+++ b/frontend/E-commerce/frontend/src/components/NavBar.module.css
@@ -22,9 +22,12 @@
     font-weight: 500;
 }
 
-.navbar > div:nth-child(2) div:hover{
+.navbar > div:nth-child(2) {
 cursor:pointer
 }
 .navbar h1:hover{
     cursor:pointer
 }
+.navbar > div:nth-child(3){
+    cursor:pointer
+    }
